Add print_default_config command
Instead of starting the service this will output the embedded
default configuration that can be used to initialize a custom
one from the runnable Docker image.