@@ -6,31 +6,14 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.Reader;
 import java.net.URI;
-import java.net.URISyntaxException;
-import java.nio.file.Files;
-import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.Map;
-import java.util.Objects;
 import java.util.Properties;
 
 public class Utils {
     public static String resourceAsString(String resourceName, Class<?> interestedClass) {
-        try {
-            var resource = resource(resourceName, interestedClass);
-            return new String(Files.readAllBytes(resource));
+        try (var resource = interestedClass.getResourceAsStream(resourceName)) {
+            return new String(resource.readAllBytes());
         } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-    }
-
-    public static Path resource(String resourceName, Class<?> interestedClass) {
-        var resource = interestedClass.getResource(resourceName);
-        Objects.requireNonNull(resource, () -> "resource " + resourceName + "not found");
-        try {
-            URI uri = resource.toURI();
-            return Paths.get(uri);
-        } catch (URISyntaxException e) {
             throw new RuntimeException(e);
         }
     }
